# mr-fat-controller

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Containerfile  README.md  alembic.ini  build_hook.py  pyproject.toml
.github/: codeql-config.yml
.github/workflows/: build.yml  codeql-analysis.yml  prerelease-build.yml  release-build.yml  style.yml  tests.yml
dev/: .env  docker-compose.yaml
mr_fat_controller/: __about__.py  __init__.py  __main__.py  cli.py  logging.py  mqtt.py  server.py  settings.py  state.py  util.py  withrottle.py
mr_fat_controller/alembic/: env.py
mr_fat_controller/alembic/versions/: 0d8586eb471a_link_points_to_block_detectors.py  2b85d6115293_create_power_switches_table.py  4b07c03857c6_add_train_properties.py  65f463b84705_create_block_detectors_table.py  6e223f240db1_create_points_table.py  78028e0d5172_create_signal_automations.py  8d72179919b8_create_trains_table.py  95651fc3abf7_add_device_status.py  c289b80d0c15_create_signals_table.py  ca8797f8bc86_create_entities_table.py  d49125a665f3_create_train_controllers_table.py  f020d86f096a_create_devices_table.py  f11e0e87f8f6_link_signals_to_points.py  f4ae106c7ce7_create_the_controller_model.py  f63d2bb6685d_create_the_turnout_model.py
mr_fat_controller/api/: __init__.py  block_detectors.py  controllers.py  devices.py  entities.py  points.py  power_switches.py  signal_automations.py  signals.py  state.py  train_controllers.py  trains.py  turnouts.py
mr_fat_controller/automation/: __init__.py
mr_fat_controller/background/: __init__.py
mr_fat_controller/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
mr_fat_controller/frontend/src/: App.svelte  app.css  util.ts  vite-env.d.ts
mr_fat_controller/frontend/src/lib/: BlockDetectorList.svelte  ControllerList.svelte  DevicesList.svelte  EntitiesList.svelte  Icon.svelte  PointsList.svelte  PowerSwitchList.svelte  SignalList.svelte  StateSocketProvider.svelte  TurnoutButton.svelte  TurnoutList.svelte
mr_fat_controller/frontend/src/lib/controllers/: CombinedThrottleBreak.svelte  DirectThrottle.svelte  SeparateThrottleBreak.svelte  TrainController.svelte  util.ts
mr_fat_controller/frontend/src/lib/editors/: BlockDetectorEditor.svelte  EntityEditor.svelte  PointsEditor.svelte  PowerSwitchEditor.svelte  SignalAutomationEditor.svelte  SignalEditor.svelte  TrainControllerEditor.svelte  TrainEditor.svelte
mr_fat_controller/frontend/src/lib/layouts/: ExtraLargeLayout.svelte  SmallLayout.svelte
mr_fat_controller/frontend/src/lib/lists/: BlockDetectorList.svelte  DevicesList.svelte  EntitiesList.svelte  PointsList.svelte  PowerSwitchList.svelte  SignalAutomationList.svelte  SignalList.svelte  TrainControllerList.svelte
mr_fat_controller/frontend/src/lib/providers/: DataProvider.svelte  EntitiesProvider.svelte  StateSocketProvider.svelte
mr_fat_controller/frontend/src/store/: controllers.ts  index.ts  turnouts.ts
mr_fat_controller/models/: __init__.py  block_detector.py  block_detectors.py  controller.py  device.py  entity.py  meta.py  points.py  power_switch.py  signal.py  signal_automation.py  train.py  train_controller.py  train_controllers.py  turnout.py  util.py
mr_fat_controller/withrottle/: __init__.py  client.py  mqtt.py  util.py
tests/: .env  __init__.py  conftest.py  docker-compose.yaml  test_server.py
tests/api_tests/: test_api.py  test_controllers.py
