[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mr-fat-controller"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Mark Hall", email = "mark.hall@work.room3b.eu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/mr-fat-controller#readme"
Issues = "https://github.com/unknown/mr-fat-controller/issues"
Source = "https://github.com/unknown/mr-fat-controller"

[tool.hatch.version]
path = "mr_fat_controller/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "alembic==1.*",
  "asyncpg==0.*",
  "fastapi==0.*",
  "sqlalchemy==2.*",
  "typer[all]==0.*",
  "uvicorn[standard]==0.*",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov",
  "httpx",
]
[tool.hatch.envs.test.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=mr_fat_controller --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "mr_fat_controller/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
